--- a/style1.css
+++ b/style1.css
@@ -1,31 +1,36 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
+
 .hero {
     overflow: hidden;
     width: 100vw;
     height: 100vh;
-    background: linear-gradient(45deg,#010758,#490d61);
+    background: linear-gradient(45deg, #010758, #490d61);
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     color: #fff;
 }
-.hero h1{
+
+.hero h1 {
     font-size: 45px;
     font-weight: 500;
     margin-top: -50px;
     margin-bottom: 50px;
 }
-.hero h1 span{
+
+.hero h1 span {
     color: #ff2963;
 }
-textarea{
-    width: 600px;
+
+textarea {
+    width: 100%;
+    max-width: 600px;
     height: 250px;
     background: #403d84;
     color: #fff;
@@ -37,18 +42,22 @@ textarea{
     resize: none;
     margin-bottom: 30px;
 }
-textarea::placeholder{
+
+textarea::placeholder {
     font-size: 16px;
     color: #ddd;
-
 }
-.row{
-    width: 600px;
+
+.row {
+    width: 100%;
+    max-width: 600px;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     gap: 20px;
 }
-button{
+
+button {
     background: #ff2963;
     color: #fff;
     font-size: 16px;
@@ -60,12 +69,13 @@ button{
     display: flex;
     align-items: center;
 }
-button img{
+
+button img {
     width: 16px;
     margin: 10px;
-
 }
-select{
+
+select {
     flex: 1;
     color: #fff;
     background: #403d84;
@@ -81,4 +91,29 @@ select{
     background-position-x: calc(100% - 20px);
     background-position-y: 20px;
 }
+
+/* Media Queries */
+@media (max-width: 425px) {
+    .hero h1 {
+        font-size: 36px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .textarea {
+       
+        max-width:100% ;
+        margin-left:10px;
+        margin-right: 10px;
+        
+        
+    }
+
+    .row {
+        max-width: 90%;
+        
+        
+    }
+}
+
 
